# stoatchat

./: .release-please-manifest.json  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.local-minimal  Dockerfile.useCurrentArch  README.md  Revolt.toml  compose.yml  deamon.sh  default.nix  release-please-config.json
.github/workflows/: docker-cleanup.yaml  docker.yaml  docs-test.yml  docs.yml  git-town.yml  nac-api-build.yml  publish-crates.yml  release-please.yml  release-webhook.yml  rust.yaml
.mise/: config.toml
.mise/tasks/docker/: publish-canary
.mise/tasks/docs/: build
crates/bonfire/: Cargo.toml  Dockerfile
crates/bonfire/src/: main.rs  websocket.rs
crates/bonfire/src/events/: impl.rs  state.rs
crates/cmd/: Cargo.toml
crates/cmd/src/: healthcheck.rs  invites.rs  main.rs
crates/core/coalesced/: Cargo.toml
crates/core/config/: Cargo.toml  Revolt.test.toml  Revolt.toml
crates/core/config/src/: lib.rs
crates/core/database/: Cargo.toml
crates/core/database/src/: lib.rs
crates/core/database/src/amqp/: amqp.rs  consumer.rs  mod.rs
crates/core/database/src/drivers/: mod.rs  reference.rs
crates/core/database/src/events/: client.rs  rabbit.rs
crates/core/database/src/models/: mod.rs
crates/core/database/src/models/account_invites/ops/: mongodb.rs
crates/core/database/src/models/accounts/: mod.rs  model.rs
crates/core/database/src/models/accounts/ops/: mongodb.rs  reference.rs
crates/core/database/src/models/admin_audits/ops/: mongodb.rs
crates/core/database/src/models/admin_cases/ops/: mongodb.rs
crates/core/database/src/models/admin_migrations/ops/mongodb/: init.rs  scripts.rs
crates/core/database/src/models/admin_tokens/: rocket.rs
crates/core/database/src/models/admin_users/: rocket.rs
crates/core/database/src/models/audit_logs/: model.rs  ops.rs
crates/core/database/src/models/audit_logs/ops/: mongodb.rs  reference.rs
crates/core/database/src/models/channel_webhooks/: model.rs
crates/core/database/src/models/channels/: model.rs  ops.rs
crates/core/database/src/models/channels/ops/: mongodb.rs  reference.rs
crates/core/database/src/models/emojis/: model.rs
crates/core/database/src/models/file_hashes/: model.rs
crates/core/database/src/models/file_hashes/ops/: mongodb.rs  reference.rs
crates/core/database/src/models/files/: model.rs
crates/core/database/src/models/messages/: model.rs  ops.rs
crates/core/database/src/models/messages/ops/: mongodb.rs  reference.rs
crates/core/database/src/models/mfa_tickets/: ops.rs  rocket.rs
crates/core/database/src/models/mfa_tickets/ops/: mongodb.rs  reference.rs
crates/core/database/src/models/server_members/: model.rs  ops.rs
crates/core/database/src/models/server_members/ops/: mongodb.rs  reference.rs
crates/core/database/src/models/servers/: model.rs
crates/core/database/src/models/servers/ops/: mongodb.rs
crates/core/database/src/models/sessions/: model.rs
crates/core/database/src/models/sessions/ops/: mongodb.rs  reference.rs
crates/core/database/src/models/user_settings/ops/: reference.rs
crates/core/database/src/models/users/: model.rs  ops.rs
crates/core/database/src/models/users/ops/: mongodb.rs  reference.rs
crates/core/database/src/tasks/: mod.rs  process_embeds.rs
crates/core/database/src/util/: acker.rs  bulk_permissions.rs  captcha.rs  chunked.rs  email.rs  ip.rs  mod.rs  password.rs  permissions.rs  rabbit.rs  reference.rs  shield.rs  utoipa.rs
crates/core/database/src/util/bridge/: v0.rs
crates/core/database/src/voice/: mod.rs  voice_client.rs
crates/core/discord/: Cargo.toml
crates/core/discord/src/: lib.rs  template.rs  types.rs
crates/core/files/: Cargo.toml
crates/core/files/src/implementation/: media_impl.rs
crates/core/models/: Cargo.toml
crates/core/models/src/v0/: accounts.rs  admin.rs  audit_logs.rs  channels.rs  files.rs  messages.rs  mfa_tickets.rs  mod.rs  search.rs  servers.rs  (+3 more)
crates/core/parser/: Cargo.toml
crates/core/parser/src/: lib.rs
crates/core/permissions/: Cargo.toml
crates/core/permissions/src/: impl.rs  test.rs
crates/core/presence/: Cargo.toml
crates/core/presence/src/: lib.rs
crates/core/ratelimits/: Cargo.toml
crates/core/ratelimits/src/: rocket.rs
crates/core/result/: Cargo.toml
crates/core/result/src/: axum.rs  lib.rs  rocket.rs
crates/core/search/: Cargo.toml
crates/core/search/src/: client.rs  lib.rs  types.rs
crates/daemons/crond/: Cargo.toml  Dockerfile
crates/daemons/crond/src/: main.rs
crates/daemons/crond/src/tasks/: acks.rs  delete_accounts.rs  file_deletion.rs  mod.rs
crates/daemons/ospreyd/: Cargo.toml  Dockerfile
crates/daemons/ospreyd/src/: kafka.rs  main.rs
crates/daemons/ospreyd/src/api/: mod.rs
crates/daemons/pushd/: Cargo.toml  Dockerfile
crates/daemons/pushd/src/: main.rs
crates/daemons/searchd/: Cargo.toml
crates/daemons/searchd/src/: index.rs  main.rs
crates/daemons/searchd/src/consumers/: channel_delete.rs  message.rs  message_delete.rs  message_edit.rs  mod.rs
crates/daemons/voice-ingress/: Cargo.toml  Dockerfile
crates/daemons/voice-ingress/src/: api.rs  main.rs
crates/delta/: Cargo.toml  Dockerfile
crates/delta/src/: main.rs
crates/delta/src/routes/: mod.rs  root.rs
crates/delta/src/util/: audit_log_reason.rs  kafka.rs  mod.rs  osprey.rs  ratelimits.rs  test.rs  version_gate.rs
crates/services/autumn/: Cargo.toml  Dockerfile
crates/services/autumn/src/: api.rs  exif.rs  metadata.rs
crates/services/gifbox/: Cargo.toml
crates/services/gifbox/src/: main.rs  types.rs
crates/services/january/: Cargo.toml  Dockerfile
crates/services/january/src/: requests.rs  website_embed.rs
docs/: asyncapi.yml  docusaurus.config.ts  package-lock.json  package.json  pnpm-lock.yaml
docs/docs/: faq.md  help.md  index.md
docs/docs/developers/: _category_.json  endpoints.md  voice.md
docs/docs/developers/api/: permissions.md
docs/docs/developers/events/: protocol.md
docs/docs/developing/: _category_.json  contrib.md
docs/docs/developing/backend/: new_features.md
scripts/: build-image-layer.sh  mongo-init.js
(+144 files in other folders)
