[package]
name = "stoat-cmd"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.60", features = ["derive"] }
mongodb = { version = "3.5.1" }

serde = "1.0.188"
futures = "0.3.28"

# Core
revolt-config = { path = "../core/config" }
revolt-database = { path = "../core/database" }
tabled = "0.20.0"
rand = "0.9.2"
