[package]
name = "revolt-discord"
version = "0.11.3"
edition = "2021"
license = "MIT"
authors = ["Zomatree <me@zomatree.live>"]
description = "Revolt Backend: Discord Compatibility"
repository = "https://github.com/stoatchat/stoatchat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]


[dependencies]
# Core
revolt-result = { version = "0.11.3", path = "../result" }
revolt-database = { version = "0.11.3", path = "../database" }
revolt-permissions = { version = "0.11.3", path = "../permissions" }
revolt-models = { version = "0.11.3", path = "../models" }

# Serialisation
serde_json = { version = "1" }
serde = { version = "1", features = ["derive"] }

# Http
reqwest = { version = "0.12", features = ["json"] }
